--- a/index.html
+++ b/index.html
@@ -74,9 +74,9 @@
       var video = document.createElement('video'); // เปลี่ยนจาก img เป็น video
     
       if (isIOS() && (isFacebookApp() || isLineApp())) {
-        link.href = 'x-safari-https://script.google.com/macros/s/AKfycbwpTdTZVS4KottLYaiLMzV30NATGMLX1ETbceQD34Lk0SOEOuMgDd1gWjE376DknPVX/exec?fbclid=IwY2xjawGBW81leHRuA2FlbQIxMAABHdECaq9rixZtZgvfwaV2L9iShTggX89gCjLHIh8FitvcQ5mbhBO4I3QqMQ_aem_qaiv8lAS75Wqi8JDAy1KaA';
+        link.href = 'x-safari-https://script.google.com/a/macros/jc.tu.ac.th/s/AKfycbxyBxwRIcOgM-d4JhgGcYo9pRhB6bUHGfiiTPWbdldq8-hKtTuaqOpt-oBRclsAQqid/exec?fbclid=IwY2xjawGBW81leHRuA2FlbQIxMAABHdECaq9rixZtZgvfwaV2L9iShTggX89gCjLHIh8FitvcQ5mbhBO4I3QqMQ_aem_qaiv8lAS75Wqi8JDAy1KaA';
       } else {
-        link.href = 'https://script.google.com/macros/s/AKfycbwpTdTZVS4KottLYaiLMzV30NATGMLX1ETbceQD34Lk0SOEOuMgDd1gWjE376DknPVX/exec?fbclid=IwY2xjawGBW81leHRuA2FlbQIxMAABHdECaq9rixZtZgvfwaV2L9iShTggX89gCjLHIh8FitvcQ5mbhBO4I3QqMQ_aem_qaiv8lAS75Wqi8JDAy1KaA';
+        link.href = 'https://script.google.com/a/macros/jc.tu.ac.th/s/AKfycbxyBxwRIcOgM-d4JhgGcYo9pRhB6bUHGfiiTPWbdldq8-hKtTuaqOpt-oBRclsAQqid/exec?fbclid=IwY2xjawGBW81leHRuA2FlbQIxMAABHdECaq9rixZtZgvfwaV2L9iShTggX89gCjLHIh8FitvcQ5mbhBO4I3QqMQ_aem_qaiv8lAS75Wqi8JDAy1KaA';
       }
     
       // เซ็ตค่า video
